completed image hove effect project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 
       <div class="about">
-        <p>About</p>
+        <p>Look deep into Nature, <br><small>and then you will understand<br> everything better.</small></p>
+        <span style='font-size:50px;'>&#127774;</span>
       </div>
     </div>
   </body>
